# skala

StockTrading/: README.md  build.gradle  lombok.config
StockTrading2/: .dockerignore  Dockerfile  build.gradle
java_code/: App.java  ArrayExample.java  ArrayLoopExample.java  BuilderPatternExample.java  Class.java  DbExample.java  ElseIfExample.java  ExceptionExample1.java  ExceptionExample2.java  ForEachExample.java  Gogo.java  IfExample.java  InputExample.java  LoginExample.java  Main.java  OutputExample.java  PatternExample.java  VariableExample.java
linux/: test
mariadb_tmplt/: maria_db.yaml
module05-Dependency-Injection01-basic/: build.gradle  settings.gradle
module10-SpringMVC-CRUD-basic/: build.gradle  settings.gradle
product-crud-sample/: build.gradle  dev.sh  prod.sh  settings.gradle  test.sh
skala-basic/: .gitignore
skala-gai/: .gitignore  application_logs.json  bcrypt_test.sh  codelab_bcrypt.py  codelab_context_log.py  codelab_generator.ipynb  codelab_msa.py  codelab_multi.py  codelab_scanner.py  deco.py  eda_report.py  generator1.ipynb  generator2.ipynb  input_tasks.csv  insecure_sample.py  join_lab_result.txt  list.ipynb  logs.json  menu.py  multipro.ipynb  mypy.py  pyproject.toml  test.ipynb
skala-gai/eda_report/: EDA_Report.md  processed_reviews.csv
skala-gai/env_logging_example/: .env  main.py
skala-intro/: .gitignore  echo.py  password.py  readme.md  tetris.py
skala-stock-api/: .dockerignore  .gitignore  DOCKER.md  Dockerfile  IMPLEMENTATION.md  build.gradle  docker-compose.yml  pom.xml  settings.gradle
spring-maven/: pom.xml
(+201 files in other folders)
