[tool.poetry]
name = "skala-gai"
version = "0.1.0"
description = ""
authors = ["벡강민 <rkdgur1902@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reportlab = "^4.4.7"
passlib = "1.7.4"
bcrypt = "3.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
